ajout features + clean